<resources>
    <string name="app_name">GoKeep</string>


    <!--Tutorial-->
    <string name="tutorial_title_1">Track your spending \n to achieve the goal</string>
    <string name="tutorial_title_2">Set your goal and \n make it come true</string>
    <string name="tutorial_title_3">Use 6-3-1 to group \n your monthly cost</string>
    <string name="tutorial_title_4">Start to explore \n your journey</string>
    <string name="tutorial_sub_title_1">Track Your Money</string>
    <string name="tutorial_sub_title_2">Set Your Goal</string>
    <string name="tutorial_sub_title_3">Group Your Expense</string>
    <string name="tutorial_sub_title_4">Grow Your Dream</string>
    <string name="tutorial_message_1">Start record your everyday spending and create a habit. So you can achieve your goal.</string>
    <string name="tutorial_message_2">Setting up your goal as your Motivation and keep saving money to make your goal complete</string>
    <string name="tutorial_message_3">Categorize your spending. 60% for the daily spending, 30% for your deposit, 10% for your Goal</string>
    <string name="tutorial_message_4">Make a habit of record your everyday spending, and save money for your dreams or gaols! </string>
    <string name="tutorial_button_text">Let\'s start</string>

    <!--OnBoarding-->
    <string name="on_boarding_title_1">Set Your</string>
    <string name="on_boarding_sub_title_1">Goal</string>
    <string name="on_boarding_message_1">Setting up your goal as your Motivation and keep saving money to make your goal complete</string>

    <string name="on_boarding_title_2">Track Your</string>
    <string name="on_boarding_sub_title_2">Spending</string>
    <string name="on_boarding_message_2">Start record your everyday spending and create a habit. So you can achieve your goal.</string>

    <string name="on_boarding_title_3">Build Your</string>
    <string name="on_boarding_sub_title_3">Habit</string>
    <string name="on_boarding_message_3">Make a habit of record your everyday spending, and save money for your dreams or gaols!</string>

    <!--Home header-->
    <string name="home_header_title">Available Balance</string>
    <string name="home_header_title2">Goals</string>
    <string name="home_header_available_balance">$%1$s</string>

    <!--Home body-->
    <string name="home_body_title">Daily Spending</string>
    <string name="home_body_title2">See all</string>
    <string name="home_body_today_title">Today</string>
    <string name="home_body_yesterday_title2">Yesterday</string>

    <!--Goal-->
    <string name="goal_set_title">Set Your Goal</string>
    <string name="goal_achieved_title">Achieved</string>

    <!--Create-->
    <string name="create_goal_fab">Create Your Goal</string>
    <string name="create_spending_fab">Record Your Spending</string>
    <string name="create_goal_title">Create\nYour Goal</string>
    <string name="create_spending_title">Record\nYour Spending</string>
    <string name="add_photo_title">Add a picture\nfor your goal</string>
    <string name="goal_edit_text_title">Goal Title</string>
    <string name="goal_edit_text_hint">Your goal...</string>
    <string name="goal_budget_edit_text_title">Goal Budget</string>
    <string name="goal_time_title">Goal Time</string>
    <string name="goal_button_text">Create goal</string>
    <string name="spending_edit_text_title">Spending Title</string>
    <string name="spending_edit_text_hint">$</string>
    <string name="spending_budget_edit_text_title">Cost</string>
    <string name="spending_time_title">Spending Time</string>
    <string name="spending_button_text">Create Spending</string>

    <string name="history_head_title">Spending\nHistory</string>
    <string name="history_detail_title">Detail</string>
    <string name="history_history_title">History</string>

    <!--BottomSheet-->
    <string name="take_photo_by_camera_title">Take a Photo by camera</string>
    <string name="take_photo_by_gallery_title">Take a Photo by gallery</string>

    <!--Permissions Dialog-->
    <string name="rationale_camera">This app needs access to your camera so you can take pictures.</string>
    <string name="rationale_gallery">This app needs access to your gallery so you can select pictures.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="returned_from_app_settings_to_activity">
        Returned from app settings to MainActivity with the following permissions:\n\nCamera: %s
    </string>


    <string name="test">jrio2jewjfijewfijweifjewfiowejfiwejfewjfewifjwiefjweijfewofjwenkjdsnfjkndsjfnsdjndjkvnjcxnvjcxnvjkxcnvjknejnv
    wej13213123123ewjfewifjwiefjweijfewofjwenkjdsnfjkndsjfnsdjndjkvnjcxnvjcxnvjkxcnvjknejnv
    weojfweifjewjfewifjwiefjweijfewofjwenkjdsnfjkndsjfnsdjndjkvnjcxnvjcxnvjkxcnvjknejnv
    ewjfewifjwiefjweijfewofjwenkjdsnfjkndsjfnsdjndjkvnjcxnvjcxnvjkxcnvjknejnvewjfewifjwiefjweijfewofjwenkjdsnfjkndsjfnsdjndjkvnjcxnvjcxnvjkxcnvjknejnv
    vnrevnoenerjrvioerjifjergijerigjeriogjerigjreiogewjfewifjwiefjweijfewofjwenkjdsnfjkndsjfnsdjndjkvnjcxnvjcxnvjkxcnvjknejnv
    gjoierjgroejgioerjgioerjgierjgorejgierjgoirejgreoigjreiogjeroijgirejgioerjg</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>