<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="8dp"
    android:background="@drawable/round_corners"
    android:orientation="vertical"
    android:clickable="true"
    tools:context=".view.ui.fragment.CreateItemFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:orientation="horizontal">

        <TextView
            style="@style/LargeTitle.create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:text="@string/create_goal_title"/>

        <ImageView
            android:id="@+id/cancelButton"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_cancel_black_24dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/addPictureLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="@drawable/round_dash_background"
        android:layout_marginTop="16dp"
        android:layout_marginRight="36dp"
        android:layout_marginLeft="36dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/photoImageView"
            android:layout_width="match_parent"
            android:layout_height="156dp"
            android:visibility="gone"
            android:scaleType="centerCrop"/>

        <ImageView
            android:id="@+id/cameraImageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_add_a_photo_black_24dp" />
        <TextView
            style="@style/Title3.addPhoto"
            android:id="@+id/cameraTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/add_photo_title"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">
        <TextView
            style="@style/Title3.goalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/goal_edit_text_title"/>
        <EditText
            style="@style/BorderlessEditText"
            android:id="@+id/goalTitleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:hint="@string/goal_edit_text_hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">
        <TextView
            style="@style/Title3.goalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/goal_budget_edit_text_title"/>
        <EditText
            style="@style/BorderlessEditText"
            android:id="@+id/goalBudgetEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:inputType="numberDecimal"
            android:hint="@string/spending_edit_text_hint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            style="@style/Title3.goalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/goal_time_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                style="@style/BorderlessEditText"
                android:id="@+id/fromDateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:hint="From"/>


            <Button
                style="@style/BorderlessEditText"
                android:id="@+id/toDateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="16dp"
                android:hint="To"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="2"
        android:orientation="vertical">
        <Button
            style="@style/RoundButton.tutorial"
            android:id="@+id/createGoalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:text="@string/goal_button_text" />
    </LinearLayout>


</LinearLayout>