<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="48dp"
    android:layout_marginStart="48dp">

    <ImageView
        android:id="@+id/keyImage"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:translationY="24dp"
        android:translationZ="99dp"
        android:src="@drawable/ic_circle_check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="24dp"
        app:layout_constraintTop_toBottomOf="@+id/keyImage"
        app:layout_constraintEnd_toEndOf="@+id/keyImage"
        app:layout_constraintStart_toStartOf="@+id/keyImage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/tutorialImageView"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_circle_save_money" />

            <TextView
                android:id="@+id/subTitleTexView"
                style="@style/Title2.tutorial"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:text="@string/tutorial_sub_title_1" />

            <TextView
                android:id="@+id/messageTexView"
                style="@style/Body.tutorial"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:layout_marginBottom="32dp"
                android:text="@string/tutorial_message_1" />

            <Button
                android:id="@+id/tutorialButton"
                style="@style/RoundButton.tutorial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:layout_marginBottom="32dp"
                android:text="@string/tutorial_button_text" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>